--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,26 @@
-backports-abc==0.5
-backports.shutil-get-terminal-size==1.0.0
-bleach==2.0.0
+arrow==0.10.0
+asn1crypto==0.23.0
 certifi==2017.7.27.1
+cffi==1.11.0
 chardet==3.0.4
-configparser==3.5.0
-decorator==4.1.2
-entrypoints==0.2.3
+click==6.7
+cryptography==2.0.3
 enum34==1.1.6
-functools32==3.2.3.post2
-future==0.16.0
-gyp==0.1
-html5lib==0.999999999
-idna==2.5
-ipykernel==4.6.1
-ipython==5.4.1
-ipython-genutils==0.2.0
+Flask==0.12.2
+idna==2.6
+ipaddress==1.0.18
+itsdangerous==0.24
 Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter-client==5.1.0
-jupyter-core==4.3.0
 MarkupSafe==1.0
-mistune==0.7.4
-nbconvert==5.2.1
-nbformat==4.3.0
-notebook==5.0.0
-oauthlib==2.0.2
-pandocfilters==1.4.2
-pathlib2==2.3.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-psycopg2==2.7.3
-ptyprocess==0.5.2
-Pygments==2.2.0
+pkg-resources==0.0.0
+pycparser==2.18
+PyJWT==1.5.3
+pyOpenSSL==17.3.0
 python-dateutil==2.6.1
-python-twitter==3.3
-pyzmq==16.0.2
-requests==2.18.3
-requests-oauthlib==0.8.0
-scandir==1.5
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-terminado==0.6
-testpath==0.3.1
-tornado==4.5.1
-traitlets==4.3.2
+pytz==2017.2
+requests==2.18.4
+schedule==0.4.3
+six==1.11.0
+twilio==6.7.0
 urllib3==1.22
-virtualenv==15.0.1
-wcwidth==0.1.7
-webencodings==0.5.1
+Werkzeug==0.12.2
