--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 maxminddb==1.3.0
+pendulum==1.3.0
 phone-iso3166==0.3.1
 phonenumbers==8.8.3
 pkg-resources==0.0.0
@@ -25,11 +26,13 @@ PyJWT==1.5.3
 pyOpenSSL==17.3.0
 python-dateutil==2.6.1
 pytz==2017.2
+pytzdata==2017.2.2
 requests==2.18.4
 schedule==0.4.3
 six==1.11.0
 SQLAlchemy==1.1.14
 timezones==1.9.7
 twilio==6.7.0
+tzlocal==1.4
 urllib3==1.22
 Werkzeug==0.12.2
